# squidalytics.ink

./: .gitignore  Makefile  README.md  compile_sass.sh  pyproject.toml
squidalytics/: manage.py
squidalytics/articles/: wagtail_hooks.py
squidalytics/articles/blocks/: __init__.py  blocks.py
squidalytics/articles/migrations/: 0001_initial.py  0002_alter_blogpage_body_alter_formpage_body_and_more.py  0003_remove_blogpage_image_remove_blogpage_page_ptr_and_more.py  0004_initial.py  0005_blogpage_versions.py  0006_alter_blogpage_body_alter_blogpage_versions_and_more.py  0007_alter_blogpage_body_alter_blogpage_versions_and_more.py  0008_alter_blogpage_body_alter_blogpage_versions_and_more.py
squidalytics/articles/models/: base.py  blog.py
squidalytics/articles/templates/: index_template.html
squidalytics/articles/templatetags/: custom_filters.py
squidalytics/extensions/: ability_map.py  markdown_ability_tag.py
squidalytics/landing/: views.py
squidalytics/squidalytics/: asgi.py  env_names.py  settings.py  urls.py  wsgi.py
squidalytics/static/css/: custom.css  main.css  main.css.map
squidalytics/static/js/: katex-config.js  mathjax-config.js  modal.js  version-selector.js
squidalytics/static/plots/: ability_percent_effect.html
squidalytics/static/scss/: main.scss
squidalytics/templates/: base.html
squidalytics/templates/articles/: blog_base.html  blog_page.html
squidalytics/templates/blocks/: equation_block.html
squidalytics/templates/includes/: footer.html  header.html  (+1 more)
squidalytics/webhook_handler/: apps.py  update_site.sh  urls.py  views.py
(+21 files in other folders)
